# audiotag

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
cmake/: CPM.cmake
dockerfiles/: mips-test.dockerfile
include/audiotag/: audiotag.hpp  byte_conversions.hpp  byte_swap.hpp  encoding.hpp  file_reader.hpp  id3v1.hpp  id3v2.hpp  reader.hpp  tag.hpp
include/audiotag/mpeg/: mpeg_file.hpp
scripts/: mips-test.sh
src/: byte_conversions.cpp  file_reader.cpp  id3v2.cpp
src/mpeg/: mpeg_file.cpp
tests/: CMakeLists.txt  data_builder.hpp  id3v1_builder.hpp  id3v2_builder.hpp  test_file_reader.cpp  test_mpeg_reader.cpp  vector_reader.hpp
